sample env file

--- a/env.env
+++ b/env.env
@@ -1,5 +1,5 @@
-SMARTTHINGS_PAT=22b267de-6870-49f8-ba2f-cd313eb25f09
-VIRTUAL_SWITCH_ID=ca93f74c-6f99-425c-9bf6-5a72c79f5c06
-REAL_PLUG_ID=1b333c1e-af47-44d5-9cc4-0026551ce846
+SMARTTHINGS_PAT=
+VIRTUAL_SWITCH_ID=
+REAL_PLUG_ID=
 POLL_INTERVAL=5
 SHUTDOWN_DELAY=5
