updated env file

--- a/env.env
+++ b/env.env
@@ -1,5 +1,6 @@
-SMARTTHINGS_PAT=
 VIRTUAL_SWITCH_ID=
-REAL_PLUG_ID=
 POLL_INTERVAL=5
 SHUTDOWN_DELAY=5
+
+SMARTTHINGS_CLIENT_ID=
+SMARTTHINGS_CLIENT_SECRET=
